changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Clean player sp fixing code.
Nicolas Weeger 2010-04-23

Extract part of fix_object() to fix_player(), to make the function more manageable.
Nicolas Weeger 2010-04-26

Rename POTION_EFFECT to POTION_RESIST_EFFECT to better describe what it is.
Nicolas Weeger 2010-04-26

Warn players of the end of resistance effects.
Nicolas Weeger 2010-04-26

Some unit tests for fix_object().
Nicolas Weeger 2010-04-26

server/skills.c, server/c_object.c, include/sproto.h: Make the 'examine' 
command id of objects. 
* Move the detect curse and detect magic logic out into separate functions 
* Make the id skills use the item types array to figure out which objects 
   they should identify
* For any object which is examined, use the player's skills to attempt to
   detect magic, sense curse and then perform a skill-based id of objects.
Brendan Lally 2010-04-26

==============================================================================
Changes for 1.50.0
==============================================================================

server/attack.c: Don't make doors (or other objects) harder to hit because
   they lack a move type.  Remove unused variable.
MSW 2010-04-25

Fix a missing whitespace issue that makes books read like "which gives the
recipientImmunity to magic".
Kevin Bulgrien 2010-04-25

Add ability to send face number (instead of name) - add new definition
to newclient.h, update protocol doc.  First commit is so shared newclient.h
file can get used.
Files affected: include/shared/newclient.h doc/Developers/protocol
MSW 2010-04-24
