@@ -14,8 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Clean player grace fixing code.
+Nicolas Weeger 2010-04-26
+
 Clean player sp fixing code.
-Nicolas Weeger 2010-04-23
+Nicolas Weeger 2010-04-26
 
 Extract part of fix_object() to fix_player(), to make the function more manageable.
 Nicolas Weeger 2010-04-26
